--- a/thanks.html
+++ b/thanks.html
@@ -43,65 +43,19 @@
 					<li>
 						<a class="underline-link" href="index.html#equipment">Equipment</a>
 					</li>
-					<li><a class="underline-link" href="#contact">Contact</a></li>
+					<li><a class="underline-link" href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 		</header>
-		<!-- Contact ---------------------------------------------->
-		<section id="contact" class="section contact">
-			<div class="container-new">
-				<div class="col-15"></div>
-				<div class="col-75">
-					<h1 class="showcase-title">Contact</h1>
-					<p class="paragraph-medium showcase-text">
-						Leave your message bellow. We'll be in touch soon.
-					</p>
-
-					<!-- Form ------------->
-					<form
-						action="/thanks.html"
-						class="form"
-						name="contact"
-						method="POST"
-						data-netlify="true"
-						netlify-honeypot="bot-field"
-					>
-						<input
-							class="hidden"
-							type="hidden"
-							name="contact"
-							value="contact"
-						/>
-						<p class="hidden">
-							<label
-								>Don’t fill this out if you’re human: <input name="bot-field"
-							/></label>
-						</p>
-
-						<input
-							type="text"
-							name="name"
-							maxlength="256"
-							required
-							placeholder="Your name"
-						/>
-						<input
-							type="email"
-							name="email"
-							maxlength="256"
-							required
-							placeholder="Email address"
-						/>
-						<textarea
-							name="message"
-							maxlength="5000"
-							required
-							placeholder="Leave you message"
-						></textarea>
-						<button type="submit" class="btn call-to-action red">SEND</button>
-					</form>
-				</div>
-			</div>
+		<!-- Showcase ---------------------------------------------->
+		<section class="section showcase thanks">
+			<h1 class="showcase-title">Thanks!</h1>
+			<p class="paragraph-medium">We'll be in touch!</p>
+			<p class="paragraph-medium">
+				<a class="underline-link underline-link-persistent" href="index.html"
+					>← Back to home</a
+				>.
+			</p>
 		</section>
 
 		<!-- Footer ---------------------------------------------->
@@ -126,7 +80,7 @@
 								>Equipment</a
 							>
 						</li>
-						<li><a class="underline-link" href="#contact">Contact</a></li>
+						<li><a class="underline-link" href="contact.html">Contact</a></li>
 					</ul>
 					<p>
 						We use affiliate links, meaning, at no cost to you, we will earn a
